--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Image</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Upload Image</h1>
-        <form id="uploadForm" enctype="multipart/form-data">
-            <input type="file" id="image" name="image" accept="image/*" required />
-            <button type="submit">Upload</button>
-        </form>
-        <div id="message"></div>
-    </div>
+    <header id="mainstart">
+        <label id="title">PronađiUslugu</label>
+        <img src="viber_image_2025-02-01_09-47-25-451.png" id="titleimage">
+        <label id="pocetna">Početna</label>
+        <label id="onama">O nama</label>
+    </header>
+    <label id="welcome">DOBRO DOŠLI</label>
+         <button id="startbtn">
+             <a href="main.html">Počnite pretraživati</a>                             
+         </button>
+         <label id="kratkiopis">
+            <strong>PronađiUslugu</strong> je inovativna web platforma koja korisnicima omogućava da lako pronađu sve potrebne servise širom cijele Bosne i Hercegovine.<br>
+            Sve što trebate učiniti je kliknuti na dugme ispod i započeti pretragu.<br>
+            Pronađite servis koji vam je potreban uz samo nekoliko klikova!<br>
+            Platforma je jednostavna za korištenje i dostupna svima.<br>
+    
+        </label>
 
-    <script src="app.js"></script>
+      
 </body>
+<script src="main.js"></script>
 </html>
